更新歡迎頁面為公開頁面

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>歡迎來到我的專案！</h1>
-    <p>這是我的第一個 GitHub 專案。</p>
+    <p>這是一個公開的 GitHub 專案，任何人都可以訪問。</p>
+    <p>請隨意查看和使用我的代碼！</p>
 </body>
 </html>
